2017-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mktexfmt.c: Use fmtutil-user for consistency with other platforms.

2017-06-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mktexfmt.c: Adapt to the new fmtutil.pl in TeX Live.

2016-04-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* All *.c, *.h files: Copyright year 2016.

2015-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dirutil.h, getdestdir.h, mktexupd.h (removed): Merged ...
	* mktex.h (new): ... into this and define normalize().
	* mkpaths.c (new): Define mkpaths() to handle TEXMFDBS.
	* getdestdir.c, mktexpk.c, mktexupdmain.c: Use normalize().
	* mktexlsr.c: Use normalize() and mkpaths().
	* mktexupd.c: Use mkpaths().

2015-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): WEB2C_KPSE_VERSION => WEB2CVERSION.
	* dirutil.[ch], getdestdir.h, mktexupd.h: Add W32TeX Copyright.
	* getdestdir.c, mktexfmt.c, mktexlsr.c, mktexmf.c, mktexupd.c,
	mktexupdmain.c: Sync with W32TeX.
	* mktexpk.c, mktextfm.c: Sync with W32TeX.
	Use KPSEVERSION and WEB2CVERSION instead of WEB2C_KPSE_VERSION.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_PROGRAMS): Drop fmtutil, now a perl script.
	* fmtutil.c: Removed.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace the deprecated
	spawnvp() by _spawnvp(), they differ for 64-bit MinGW.

2012-12-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* getdestdir.c: Correct return value of getdestdir().

2012-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dirutil.c: Use stat in int is_dir ().
	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Install texhash.exe as copy of mktexlsr.exe.

2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace P_WAIT by _P_WAIT.

2012-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Define WEB2C_KPSE_VERSION.